Refactor emails (#408)
* Refactor change place status email.

* Refactor create-employee-password-page.html email.

* Refactor habit-assign-friend-request.html email.

* Removed unused new-event-comment-email-page.html

* Removed unused user-received-comment-email-page.html and user-received-comment-reply-email-page.html

* Refactor new-places-report-email-page.html

* Refactor restore-email-page.html

* Refactor scheduled-notification-email-page.html

* Refactor success-restored-password-page.html

* Refactor user-activation-page.html

* Refactor user-approval-email-page.html

* Remove dumb code.

* Remove unnecessary validation.

* Fix.

* Fix.

* Refactored user-reasons-of-deactivation-page.html

* Refactored user-violation-mail.html

* Refactored verify-email-page.html

* Cleanup.

* Fix test.

* Changed logo for Pick Up City and fixing sincerely text.

* Removed duplication.